--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/timetable_db
-spring.datasource.username=root
-spring.datasource.password=aiml
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+## Datasource: prefer environment variables (for production), fall back to H2 in-memory
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:timetable;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-server.port=8080
+## Enable H2 console for local debugging
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+server.port=${PORT:8080}
